dark mode minor fixes

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,12 +1,13 @@
 @use "./utilities/variables.scss" as *;
 @import "bootstrap/scss/bootstrap.scss";
-@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100;200;300;400;500;600&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100;200;300;400;500;600&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap,900;1');
 
 body{
     font-family: $main_font;
+    font-weight: 900;
     color: rgb(0, 0, 0);
     background-color: #dcdcdc;
-    transition: background-color .2s ease, color .2s ease;
+    transition: background-color 2s ease, color 2s ease;
     margin: 0;
     overflow-x: hidden;
 
